--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@
                     <li>
                         <a class="page-scroll" href="#contact">Garden of Ireland</a>
                     </li>
+                    <li>
+                        <a class="page-scroll" href="#booking">Booking</a>
+                    </li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
@@ -128,6 +131,29 @@
                     <p>This is a tour you cannot miss! The strenous journey helped through the e-bikes, this will surely be an experience to remember for a life time.</p>
                   
                 </div>
+            </div>
+        </div>
+    </section>
+    
+        <!-- Booking Section -->
+    <section id="booking" class="container content-section text-center">
+        <div class="row">
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>Make a Booking</h2>
+                <p>Please email us your dates and what tour(s) you would like to do, and we'll get back to you as soon as possible. Also, check out our social media sites for more information, or just to say hello!</p>
+                <p><a href="mailto:feedback@startbootstrap.com">booking@greenaertours.com</a>
+                </p>
+                <ul class="list-inline banner-social-buttons">
+                    <li>
+                        <a href="https://twitter.com/greenaer" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                    </li>
+                    <li>
+                        <a href="https://www.facebook.com/greenaer.ltd/" class="btn btn-default btn-lg"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
+                    </li>
+                    <li>
+                        <a href="https://plus.google.com/+Greenaer-ie/videos" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                    </li>
+                </ul>
             </div>
         </div>
     </section>
