--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">Greenaer</span> Tours
+                    <i class="fa fa-play-circle"></i>  <span class="light">Go</span> Greenaer
                 </a>
             </div>
 
@@ -141,7 +141,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Make a Booking</h2>
                 <p>Please email us your dates and what tour(s) you would like to do, and we'll get back to you as soon as possible. Also, check out our social media sites for more information, or just to say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">booking@greenaertours.com</a>
+                <p><a href="mailto:feedback@startbootstrap.com">booking@gogreenaer.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
